<resources>
    <string name="app_name">PokemonTCG</string>
    <string name="card_image_desc">Imagen de la carta</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="registro">Registro</string>
    <string name="cartas">Cartas</string>
    <string name="idiomas">Idiomas</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="reintentar">Reintentar</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="repite_contrase_a">Repite contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="ya_tienes_cuenta_inicia_sesi_n">¿Ya tienes cuenta? Inicia sesión</string>
    <string name="usuario_o_correo">Correo</string>
    <string name="entrar">Entrar</string>
    <string name="no_tienes_cuenta_reg_strate">¿No tienes cuenta? Regístrate</string>
    <string name="nueva_carta">+ NUEVA CARTA</string>
    <string name="nuevo_set">+ NUEVO SET</string>
    <string name="editar_set">✏️ EDITAR SET</string>
    <string name="eliminar_set">🗑️ ELIMINAR SET</string>
    <string name="nombre">Nombre</string>
    <string name="n_mero">Número</string>
    <string name="tipo">Tipo</string>
    <string name="rareza">Rareza</string>
    <string name="supertipo">SuperTipo</string>
    <string name="galer_a">Galería</string>
    <string name="c_mara">Cámara</string>
    <string name="menu_change_language">¿Deseas cambiar idioma?</string>
    <string name="Sin_permiso_de_camara">Sin permiso de cámara no puedes tomar fotos</string>
    <string name="Eliminar_carta">Eliminar carta</string>
    <string name="Seguro_que_deseas_eliminar_carta">¿Seguro que deseas eliminar</string>
    <string name="Sí">Sí</string>
    <string name="cancelar">Cancelar</string>
    <string name="Eliminar_set">Eliminar set</string>
    <string name="Seguro_que_deseas_eliminar_set">¿Estás seguro de que deseas eliminar este set?</string>
    <string name="Nombre_del_set">Nombre del set</string>
    <string name="nuevo_set2">Nuevo set</string>
    <string name="editar_set2">Editar set</string>
    <string name="guardar">Guardar</string>
    <string name="nueva_carta2">Nueva carta</string>
    <string name="editar_carta2">Editar carta</string>
    <string name="Carta_creada">Carta creada correctamente</string>
    <string name="Error_crear_carta">Error al crear la carta</string>
    <string name="Carta_actualizada">Carta actualizada correctamente</string>
    <string name="Error_actualizar_carta">Error al actualizar la carta</string>
    <string name="Carta_eliminada">Carta eliminada correctamente</string>
    <string name="Error_eliminar_carta">Error al eliminar la carta</string>
    <string name="abrir_sobre">Abrir Sobre</string>
    <string name="cerrar">Cerrar</string>
    <string name="perfil_actualizado">Perfil actualizado correctamente</string>
    <string name="error_perfil_actualizado">Error al actualizar perfil</string>
    <string name="username">Username</string>
    <string name="perfil">Perfil</string>

</resources>