<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_ir_cartas"
        android:title="@string/cartas"
        android:icon="@drawable/tarjetas"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_open_pack"
        android:title="@string/abrir_sobre"
        android:icon="@drawable/juegodecartas"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_profile"
        android:title="@string/perfil"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_cerrar_sesion"
        android:title="@string/cerrar_sesion"
        android:icon="@drawable/cerrarsesion"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_switch_language"
        android:title="@string/idiomas"
        android:icon="@drawable/idioma"
        app:showAsAction="always" />


</menu>
