<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/fondo">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        >

        <ImageView
            android:id="@+id/iv_profile_photo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">
            <Button android:id="@+id/btn_pick_image"
                android:layout_width="100dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/galer_a"/>
            <Button android:id="@+id/btn_take_photo"
                android:layout_width="100dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/c_mara"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:hint="@string/username"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/btn_save_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guardar"
            android:layout_marginTop="24dp"/>
    </LinearLayout>
</ScrollView>