<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.pokemontcg.ui.auth.LoginFragment"
        android:label="@string/iniciar_sesion"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_cards"
            app:destination="@id/cardsFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_login_to_register"
            app:destination="@id/registerFragment"/>
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.pokemontcg.ui.auth.RegisterFragment"
        android:label="@string/registro"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_register_to_cards"
            app:destination="@id/cardsFragment"
            app:popUpTo="@id/registerFragment"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_register_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/registerFragment"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/cardsFragment"
        android:name="com.example.pokemontcg.ui.card.CardsFragment"
        android:label="@string/cartas"
        tools:layout="@layout/fragment_cards">

        <action
            android:id="@+id/action_cards_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/cardsFragment"
            app:popUpToInclusive="true"/>

        <action
            android:id="@+id/action_cards_to_open_pack"
            app:destination="@id/openPackFragment"
            app:popUpTo="@id/cardsFragment"
            app:popUpToInclusive="true"/>

        <action
            android:id="@+id/action_cards_to_profile"
            app:destination="@id/profileFragment"
            app:popUpTo="@id/cardsFragment"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/openPackFragment"
        android:name="com.example.pokemontcg.ui.pack.OpenPackFragment"
        android:label="@string/abrir_sobre"
        tools:layout="@layout/fragment_open_pack">

        <action
            android:id="@+id/action_openPack_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/openPackFragment"
            app:popUpToInclusive="true"/>

        <action
            android:id="@+id/action_openPack_to_cards"
            app:destination="@id/cardsFragment"
            app:popUpTo="@id/openPackFragment"
            app:popUpToInclusive="true"/>

        <action
            android:id="@+id/action_openPack_to_profile"
            app:destination="@id/profileFragment"
            app:popUpTo="@id/openPackFragment"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.pokemontcg.ui.profile.ProfileFragment"
        android:label="@string/perfil"
        tools:layout="@layout/fragment_profile">

        <action
            android:id="@+id/action_profile_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/profileFragment"
            app:popUpToInclusive="true"/>

        <action
            android:id="@+id/action_profile_to_open_pack"
            app:destination="@id/openPackFragment"
            app:popUpTo="@id/profileFragment"
            app:popUpToInclusive="true"/>

        <action
            android:id="@+id/action_profile_to_cards"
            app:destination="@id/cardsFragment"
            app:popUpTo="@id/profileFragment"
            app:popUpToInclusive="true"/>
    </fragment>




</navigation>




